--- a/SettingsAccess/SettingsAccess.csproj
+++ b/SettingsAccess/SettingsAccess.csproj
@@ -12,21 +12,40 @@
     <Company>NetEti</Company>
     <Description>Assembly für den Zugriff auf die .Net AppSettings</Description>
     <Copyright>Copyright © $(Authors) 2012-2023</Copyright>
+    <AssemblyVersion>7.0.1.0</AssemblyVersion>
+    <FileVersion>7.0.1.0</FileVersion>
+    <PackageTags>NetEti Framework Settings</PackageTags>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <AssemblyRoot>$(ProjectDir)../../../ReadyBin/Assemblies</AssemblyRoot>
+  </PropertyGroup>
+  <Import Project="$(ProjectDir)../../AddOn/proj/*" Condition="exists('$(ProjectDir)../../AddOn/proj')" />
+
   <ItemGroup>
+ 		<PackageReference Include="System.Management" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="NetEti.Global">
-      <HintPath>..\..\..\ReadyBin\Assemblies\NetEti.Global.dll</HintPath>
-    </Reference>
-    <Reference Include="NetEti.XMLAccess">
-      <HintPath>..\..\..\ReadyBin\Assemblies\NetEti.XMLAccess.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+	<Choose>
+  	<When Condition="!('$(TF_BUILD)' == 'true' Or '$(GITHUB_ACTIONS)' == 'true' Or '$(NETETI_CIB)' == 'true')">
+		  <ItemGroup>
+		    <Reference Include="NetEti.Global">
+		      <HintPath>$(AssemblyRoot)/NetEti.Global.dll</HintPath>
+		    </Reference>
+		    <Reference Include="NetEti.XMLAccess">
+		      <HintPath>$(AssemblyRoot)/NetEti.XMLAccess.dll</HintPath>
+		    </Reference>
+		  </ItemGroup>
+  	</When>
+    <Otherwise>
+		  <ItemGroup>
+		    <PackageReference Include="NetEti.Global" Version="1.0.0" />
+		    <PackageReference Include="NetEti.XMLAccess" Version="1.0.0" />
+		  </ItemGroup>
+    </Otherwise>
+	</Choose>
 
 </Project>
