--- a/SettingsAccess/SettingsAccess.csproj
+++ b/SettingsAccess/SettingsAccess.csproj
@@ -11,7 +11,7 @@
     <Authors>Erik Nagel</Authors>
     <Company>NetEti</Company>
     <Description>Assembly für den Zugriff auf die .Net AppSettings</Description>
-    <Copyright>Copyright © $(Authors) 2012-2023</Copyright>
+    <Copyright>Copyright © $(Authors) 2012-$([System.DateTime]::Now.Year)</Copyright>
     <AssemblyVersion>8.0.0.0</AssemblyVersion>
     <FileVersion>8.0.0.0</FileVersion>
     <PackageTags>NetEti Framework Settings</PackageTags>
