XmlAccess substituted by SerializationUtility.DeserializeFromXml.

--- a/SettingsAccess/SettingsAccess.csproj
+++ b/SettingsAccess/SettingsAccess.csproj
@@ -35,15 +35,15 @@
 		    <Reference Include="NetEti.Global">
 		      <HintPath>$(AssemblyRoot)/NetEti.Global.dll</HintPath>
 		    </Reference>
-		    <Reference Include="NetEti.XMLAccess">
-		      <HintPath>$(AssemblyRoot)/NetEti.XMLAccess.dll</HintPath>
+		    <Reference Include="NetEti.ObjectSerializer">
+		      <HintPath>$(AssemblyRoot)/NetEti.ObjectSerializer.dll</HintPath>
 		    </Reference>
 		  </ItemGroup>
   	</When>
     <Otherwise>
 		  <ItemGroup>
 		    <PackageReference Include="NetEti.Global" Version="1.0.0" />
-		    <PackageReference Include="NetEti.XMLAccess" Version="1.0.0" />
+		    <PackageReference Include="NetEti.ObjectSerializer" Version="1.0.0" />
 		  </ItemGroup>
     </Otherwise>
 	</Choose>
